[package]
name = "sex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.15.0", features = ["exts"] }
uefi-services = "0.12.0"
spin = "0.9.3"
[dependencies.tinypci]
path = "../tinypci"
default-features = false
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]